# B2_Command_Line_Tool

./: .gitignore  CHANGELOG.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yml  cd_debian.yml  cd_snap.yml
b2/: arg_parser.py  console_tool.py
debian/: backblaze-b2.1  backblaze-b2.postinst.debhelper  backblaze-b2.prerm.debhelper  backblaze-b2.substvars  changelog  control  copyright  debhelper-build-stamp  files  manpages  rules  watch
debian/patches/: 001-rename-entrypoint.diff  002-remove-rst2ansi.diff  series
debian/tests/: control
debian/upstream/: metadata
snap/: snapcraft.yaml
test/static/: test_licenses.py
test/unit/: test_console_tool.py
